--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/errorrazor.css" rel="stylesheet" />
     <link href="MyProject.styles.css" rel="stylesheet" />
+  
 </head>
 
 <body>
@@ -26,6 +27,7 @@
 
     <script src="_framework/blazor.webview.js" autostart="true"></script>
     <script src="js/javascript.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
